--- a/index_improvisor.html
+++ b/index_improvisor.html
@@ -4,7 +4,7 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0" />
-  <title>Improvisor playlists on Youtube</title>
+  <title>Impro-Visor Playlist on Youtube</title>
 
   <!-- Data -->
 <!--
@@ -70,7 +70,7 @@
   </nav>
   <div class="section no-pad-bot" id="index-banner">
     <div class="container">
-      <h1 class="header center orange-text">Improvisor playlists on Youtube</h1>
+      <h1 class="header center orange-text">Impro-Visor Playlist on Youtube</h1>
 
     </div>
   </div>
