--- a/index_improvisor.html
+++ b/index_improvisor.html
@@ -102,7 +102,8 @@
   <div class="section">
     <div data-ex-role="viewPanel">
 
-      <div data-ex-role="view" data-ex-view-class="Thumbnail" data-ex-showall="false" data-ex-orders=".label"
+      <div data-ex-role="view" data-ex-view-class="Thumbnail" data-ex-showall="false" data-ex-orders=".publishedAt"
+        data-ex-possible-orders=".label"
         data-ex-grouped="false" data-ex-paginate="true" data-ex-page-size="20" data-ex-show-controls="false">
 
         <div data-ex-role="exhibit-lens" style="display: none;" class="video-thumbnail">
